--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,3 +1,4 @@
+{% extends 'bootstrap/base.html' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +8,10 @@
     <title>NEWS WEB APP</title>
 </head>
 <body>
+
+    {% block content %}
+
+    {% endblock %}
     
 </body>
 </html>
