ft: displayed a list of news sources id

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,5 +5,10 @@
 <div class="container bg-success">
     APP IS WORKING
 </div>
+{% for source in news_sources %}
+
+<li>{{ source.id }}</li>
+
+{% endfor %}
 
 {% endblock %}
