--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,4 +1,10 @@
 {% extends 'bootstrap/base.html' %}
+<!-- Styles block -->
+
+{% block styles%}
+    {{ super() }}
+    <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
+{% endblock %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
