--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,13 +2,27 @@
 
 {% block content %}
 
-<div class="container bg-success">
+
+<div class="container">
     APP IS WORKING
 </div>
+<div class="container">
+    <div class="row">
 {% for source in news_sources %}
 
-<li>{{ source.id }}</li>
+
+        <div class=" col-md-4 card m-2 p-2">
+
+           <div class="source_wrapper">
+                <h3><b class="text-center">{{ source.name }}</b></h3>
+                <p>{{ source.description }}</p>
+               <a class="btn btn-dark" href="{{ source.url }}" target="_blank" rel="noopener noreferrer">View Articles</a>
+           </div>
+        
+        </div>
 
 {% endfor %}
+    </div>
+</div>
 
 {% endblock %}
