--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,6 +15,11 @@
 </head>
 <body>
 
+    <!-- Navbar block  --> 
+    {% block navbar %}
+        {% include 'navbar.html' %}
+    {% endblock %}
+
     {% block content %}
 
     {% endblock %}
