--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,7 +16,7 @@
            <div class="source_wrapper">
                 <h3><b class="text-center">{{ source.name }}</b></h3>
                 <p>{{ source.description }}</p>
-               <a class="btn btn-dark" href="/source/{{ source.id }}" target="_blank" rel="noopener noreferrer">View Articles</a>
+               <a class="btn btn-dark" href="/source/{{ source.id }}">View Articles</a>
            </div>
         
         </div>
