--- a/app/templates/source.html
+++ b/app/templates/source.html
@@ -6,8 +6,18 @@
 
         {% for source in sources %}
 
-        <div class="col-md-4">
-            <img class="img-responsive" src="{{ source.urlToImage }}" alt="ti">
+        <div class="col-md-4 col-sm-6">
+
+            <div class="articles_wrapper">
+
+                <img class="img-responsive" src="{{ source.urlToImage }}" alt="image">
+                <h4>{{ source.title }}</h4>
+                <p>{{ source.description }}</p>
+                <a href="{{ source.url }}" target="_blank" rel="noopener noreferrer"><em>Read more</em></a>
+                <span>{{ source.publishedAt|truncate(13) }}</span>
+
+            </div>
+            
         </div>
 
         {% endfor %}
